# hnpaper-news

./: .gitignore  2026-01-01-2310-news.md  CNAME  Dockerfile  GEMINI.md  README.md  _config.yml  astro.config.mjs  biome.json  config.toml  index.md  makefile  news  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs
.github/workflows/: audio.yml  deploy.yml  e2e.yml  generate-audio.yml
_posts/: 2026-01-01-2315-news.md  2026-01-01-2330-news.md  2026-01-01-2338-news.md  2026-01-02-0622-news.md  2026-01-02-0626-news.md  2026-01-02-0637-news.md  2026-01-02-0639-news.md  2026-01-02-0643-news.md  2026-01-02-1803-news.md  2026-01-03-0252-news.md  2026-01-03-0355-news.md  2026-01-03-0400-news.md  2026-01-03-1806-news.md  2026-01-05-0451-news.md  2026-01-05-0507-news.md  2026-01-05-0516-news.md  2026-01-05-0528-news.md  2026-01-05-0538-news.md  2026-01-05-0543-news.md  2026-01-05-0609-news.md  2026-01-05-0623-news.md  2026-01-05-0625-news.md  2026-01-05-0730-news.md  2026-01-05-0736-news.md  2026-01-06-2146-news.md  2026-01-06-2152-news.md  2026-01-07-0327-news.md  2026-01-07-0355-news.md  2026-01-07-0406-news.md  2026-01-07-0409-news.md  2026-01-07-0437-news.md  2026-01-08-0701-news.md  2026-01-08-2155-news.md  2026-01-09-1903-news.md  2026-01-10-1805-news.md  2026-01-11-1203-news.md  2026-01-12-1444-news.md  2026-01-13-1302-news.md  2026-01-14-1327-news.md  2026-01-15-1203-news.md  (+15 more)
`news/: ${$now}.md`
assets/css/: style.scss
client/: ArticleNavigation.ts  main.ts
content/news/: 2026-01-02-0643.md  2026-01-02-1803.md  2026-01-03-0400.md  2026-01-03-1106.md  2026-01-03-1806.md  2026-01-04-1805.md  2026-01-05-0736.md  2026-01-06-2146.md  2026-01-06-2152.md  2026-01-07-0409.md  2026-01-07-0437.md  2026-01-08-0701.md  2026-01-08-2155.md  2026-01-09-1903.md  2026-01-10-1805.md  2026-01-11-1203.md  2026-01-12-1444.md  2026-01-13-1302.md  2026-01-14-1327.md  2026-01-15-1203.md  2026-01-16-1720.md  2026-01-17-2115.md  2026-01-18-1356.md  2026-01-18-1425.md  2026-01-18-1825.md  2026-01-19-1224.md  2026-01-20-1202.md  2026-01-20-1237.md  2026-01-21-1221.md  2026-01-21-2255.md  2026-01-22-1218.md  2026-01-23-2001.md  2026-01-24-1211.md  2026-01-25-1346.md  2026-01-26-1315.md  2026-01-27-0248.md  2026-01-27-0403.md  2026-01-27-1229.md  2026-01-28-1301.md  2026-01-29-1301.md  (+27 more)
data/news/: 2026-01-02-0643.md  2026-01-02-1803.md  2026-01-03-0400.md  2026-01-03-1106.md  2026-01-03-1806.md  2026-01-04-1805.md  2026-01-05-0736.md  2026-01-06-2146.md  2026-01-06-2152.md  2026-01-07-0409.md  2026-01-07-0437.md  2026-01-08-0701.md  2026-01-08-2155.md  (+188 more)
hnpaper-tts/: README.md  makefile  package.json  tsconfig.worker.json  tts-worker.ts  wrangler.toml
news/: 2026-01-01-221024.md  2026-01-01-221407.md  2026-01-01-221551.md  2026-01-01-222212-0.md  2026-01-01-223500-0.md  2026-01-01-leuuew2je.md  {{ $now.format('yyyy-MM-dd-HHmmss') }}.md
scripts/: fix-news-links.py  generate-audio.ts  migrate-urls.js  migration.js  release.sh
src/: content.config.ts  env.d.ts
styles/: input.css
templates/: base.html  index.html
tts-service/: Cargo.toml  Dockerfile  Makefile  index.html  script.js  shell.nix  style.css
tts-service/src/: audio.rs  config.rs  main.rs  progress.rs  s3.rs  server.rs  text.rs  types.rs
voxify/: Cargo.toml  Dockerfile  Makefile  README.md  shell.nix  voxify.toml.example
voxify/.github/workflows/: release.yml
voxify/crates/cli/: Cargo.toml
voxify/crates/cli/src/: main.rs  progress.rs
voxify/crates/voxify-core/: Cargo.toml
voxify/crates/voxify-core/src/: audio.rs  config.rs  error.rs  lib.rs  tests.rs  text.rs  types.rs
voxify/crates/web/: Cargo.toml
voxify/crates/web/assets/: index.html  script.js
voxify/crates/web/src/: main.rs
(+271 files in other folders)
