[package]
name = "tts-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
edge-tts-rust = "0.1.3"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.42"
gray_matter = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md-5 = "0.10"
indicatif = "0.17"
console = "0.15"
glob = "0.3"
regex = "1.10"
anyhow = "1.0"
futures = "0.3"
hex = "0.4"
dotenvy = "0.15"
rustls = { version = "0.23", features = ["ring"] }
unicode-normalization = "0.1"

[[bin]]
name = "tts-service"
path = "src/main.rs"
