[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
edge-tts-rust = "0.1.3"
gray_matter = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md-5 = "0.10"
indicatif = "0.17"
console = "0.15"
glob = "0.3"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
futures = "0.3"
hex = "0.4"
dotenvy = "0.15"
rustls = { version = "0.23", features = ["ring"] }
unicode-normalization = "0.1"
mp3-duration = "0.1.10"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
