[package]
name = "voxify-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
edge-tts-rust.workspace = true
gray_matter.workspace = true
serde.workspace = true
serde_json.workspace = true
md-5.workspace = true
regex.workspace = true
anyhow.workspace = true
thiserror.workspace = true
config.workspace = true
hex.workspace = true
dotenvy.workspace = true
rustls.workspace = true
unicode-normalization.workspace = true
mp3-duration.workspace = true
base64.workspace = true
futures.workspace = true
