[package]
name = "web"
version.workspace = true
edition.workspace = true

[dependencies]
voxify-core = { path = "../voxify-core" }
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
anyhow.workspace = true
base64.workspace = true
edge-tts-rust.workspace = true
gray_matter.workspace = true
rustls.workspace = true
